changed show more details button

--- a/product-details.html
+++ b/product-details.html
@@ -49,8 +49,8 @@
               защиты.
             </p>
           </div>
-          <div class="product-characteristics">
-            <div class="box">
+          <!-- <div class=""> -->
+            <!-- <div class="box">
               <p>
                 вес - <span>0.1</span>
               </p>
@@ -60,9 +60,9 @@
               <p>
                 в ширину - <span>11см</span>
               </p>
-            </div>
-            <button class="show-more characteristics-btn">Смотреть все характеристики</button>
-          </div>
+            </div> -->
+            <button class="product-characteristics show-more characteristics-btn">Смотреть характеристики товара</button>
+          <!-- </div> -->
           <div id="carousel-new" class="carousel-new">
             <div id="swiper-new" class="swiper-wrapper swiper-new">
               
