--- a/product-details.html
+++ b/product-details.html
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div class="reviews">
+          <!-- <div class="reviews">
             <div class="top-box">
               <h4>Отзывы</h4>
               <a href="#!">Открыть все отзывы</a>
@@ -176,7 +176,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="btns">
             <a class="brown-btn add-basket-btn" href="#!">Добавить в корзину</a>
             <!-- <a class="orange-btn" href="#!">Купить за 990 Р</a> -->
