--- a/product-details.html
+++ b/product-details.html
@@ -30,10 +30,38 @@
       </div>
       <div class="container">
         <div class="product-details">
-          <div class="product-details__img">
+
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <div class="product-details__img">
+                  <img class="product-img" src="images/catalog-img-1.png" alt="">
+                  <img class="saved-icon" src="images/icons/saved-2.svg" alt="">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="product-details__img">
+                  <img class="product-img" src="images/article-img-2.png" alt="">
+                  <img class="saved-icon" src="images/icons/saved-2.svg" alt="">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="product-details__img">
+                  <img class="product-img" src="images/article-img-3.png" alt="">
+                  <img class="saved-icon" src="images/icons/saved-2.svg" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+
+          <!-- <div class="product-details__img">
             <img class="product-img" src="images/catalog-img-1.png" alt="">
             <img class="saved-icon" src="images/icons/saved-2.svg" alt="">
-          </div>
+          </div> -->
+
+        </div>
+
           <div class="product-info">
             <div class="product-info__header">
               <h2 class="product-info__title">Ден ден дайко</h2>
