added api which will add catalog in basket

--- a/product-details.html
+++ b/product-details.html
@@ -179,9 +179,7 @@
 
   <div class="characteristics-modal product-characteristics">
     <button id="add-in-busket-btn" class="characteristics-modal__close"></button>
-    <div id="more-info" class="characteristics-box">
-      
-    </div>
+    <div id="more-info" class="characteristics-box"></div>
   </div>
 
   <!-- swiper js -->
