added all categories button

--- a/profile-page.html
+++ b/profile-page.html
@@ -56,13 +56,13 @@
               </div>
               <button class="read-more">Подробнее</button>
             </a>
-            <a href="categories.html" class="user-options">
+            <!-- <a href="categories.html" class="user-options">
               <div class="user-options__left-box">
                 <div class="user-options__img"><img src="images/icons/saved.svg" alt="saved"></div>
                 <h3 class="user-options__title">Избранное</h3>
               </div>
               <button class="read-more">Подробнее</button>
-            </a>
+            </a> -->
           </div>
         </div>
         <!-- <div class="delivery">
