--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <section class="container categories">
         <div class="top-box">
           <h4>Категории</h4>
-          <!-- <a href="categories.html">все категории</a> -->
+          <a href="categories.html">все категории</a>
         </div>
         <div class="swiper-container categories-swiper">
           <div id="swiper-wrapper-categories" class="swiper-wrapper" />
@@ -130,9 +130,9 @@
       <section class="container catalog">
         <div class="top-box">
           <h4>Каталог</h4>
-          <!-- <a class="top-box__icon" href="categories.html">
+          <a class="top-box__icon" href="categories.html">
             <img src="images/icons/shop-icon.svg" alt="">
-          </a> -->
+          </a>
         </div>
         <div class="catalog-cards" id="catalog-cards" />
       </section>
