added api on basket.html page

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <img src="images/icons/shop-icon.svg" alt="">
           </a>
         </div>
-        <div class="catalog-cards" id="catalog-cards" />
+        <div class="catalog-cards" id="catalog-cards" ></div>
       </section>
       <!-- catalog -->
     </main>
