--- a/basket.html
+++ b/basket.html
@@ -29,36 +29,7 @@
       <div class="container">
         <div class="basket">
           <h2 class="title">КОРЗИНА</h2>
-          <div class="basket-cards">
-            <div class="product">
-              <div class="product-left__box">
-                <img class="product-img" src="images/catalog-img-1.png" alt="" width="62" height="62">
-                <div>
-                  <h4 class="product-name">Ден ден дайко</h4>
-                  <div class="counter">
-                    <button class="decrement"></button>
-                    <span class="count-value">1</span>
-                    <button class="increment"></button>
-                  </div>
-                </div>
-              </div>
-              <h4 class="product-price">990 Р</h4>
-            </div>
-            <div class="product">
-              <div class="product-left__box">
-                <img class="product-img" src="images/catalog-img-1.png" alt="" width="62" height="62">
-                <div>
-                  <h4 class="product-name">Ангел металический</h4>
-                  <div class="counter">
-                    <button class="decrement"></button>
-                    <span class="count-value">1</span>
-                    <button class="increment"></button>
-                  </div>
-                </div>
-              </div>
-              <h4 class="product-price">990 Р</h4>
-            </div>
-          </div>
+          <div id="basket-cards" class="basket-cards"></div>
         </div>
         <div class="account-details">
           <h3 class="account-details__title">Данные аккаунта</h3>
