added api in all categories page

--- a/categories.html
+++ b/categories.html
@@ -26,39 +26,8 @@
           <img src="images/icons/prev-icon.svg" alt="">
         </button>
       </div>
-      <div class="categories-page__cards">
-        <a class="categories-card" href="profile-page.html">
-          <img src="images/categories-img-1.png" alt="">
-          <span class="categories-card__title">Гонги</span>
-        </a>
-        <a class="categories-card" href="profile-page.html">
-          <img src="images/categories-img-2.png" alt="">
-          <span class="categories-card__title">Коши</span>
-        </a>
-        <a class="categories-card" href="profile-page.html">
-          <img src="images/categories-img-1.png" alt="">
-          <span class="categories-card__title">Гонги</span>
-        </a>
-        <a class="categories-card" href="profile-page.html">
-          <img src="images/categories-img-2.png" alt="">
-          <span class="categories-card__title">Коши</span>
-        </a>
-        <a class="categories-card" href="profile-page.html">
-          <img src="images/categories-img-1.png" alt="">
-          <span class="categories-card__title">Гонги</span>
-        </a>
-        <a class="categories-card" href="profile-page.html">
-          <img src="images/categories-img-2.png" alt="">
-          <span class="categories-card__title">Коши</span>
-        </a>
-        <a class="categories-card" href="profile-page.html">
-          <img src="images/categories-img-1.png" alt="">
-          <span class="categories-card__title">Гонги</span>
-        </a>
-        <a class="categories-card" href="profile-page.html">
-          <img src="images/categories-img-2.png" alt="">
-          <span class="categories-card__title">Коши</span>
-        </a>
+      <div id="categories-card_container" class="categories-page__cards">
+        
       </div>
     </main>
   </div>
