added register api in 4 pages

--- a/basket.html
+++ b/basket.html
@@ -34,11 +34,11 @@
         <div class="account-details">
           <h3 class="account-details__title">Данные аккаунта</h3>
           <form>
-            <input class="form-control" type="email" placeholder="Введите e-mail">
-            <input class="form-control" type="tel" placeholder="Введите номер телефона">
-            <input class="form-control" type="text" placeholder="Введите Имя и фамилию">
-            <input class="form-control" type="text" placeholder="Введите адрес">
-            <textarea class="form-control form-control__textarea" placeholder="Добавить комментарий"></textarea>
+            <input id="user-email" class="form-control" type="email" placeholder="Введите e-mail" />
+            <input id="user-tel" class="form-control" type="tel" placeholder="Введите номер телефона" />
+            <input id="user-name" class="form-control" type="text" placeholder="Введите Имя и фамилию" />
+            <input id="user-address" class="form-control" type="text" placeholder="Введите адрес" />
+            <textarea id="user-comment" class="form-control form-control__textarea" placeholder="Добавить комментарий"></textarea>
           </form>
         </div>
       </div>
