--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="avatar">
           </div>
           <div class="user-info">
-            <h2 class="user-name">Иван</h2>
+            <h2 id="user-name-title" class="user-name"></h2>
             <!-- <span class="user-status">новичок</span> -->
           </div>
         </a>
