--- a/profile-page.html
+++ b/profile-page.html
@@ -34,15 +34,15 @@
                 <div class="status"></div>
               </div>
               <div>
-                <h4 class="user-name">Иван Владимирович </h4>
+                <h4 id="user-name-title" class="user-name"></h4>
                 <div class="user-contact">
                   <div class="box">
                     <span class="label">Телефон</span>
-                    <span class="link">+79218853609</span>
+                    <span id="user-telephone" class="link"></span>
                   </div>
                   <div class="box">
                     <span class="label">Email</span>
-                    <span class="link">Ivanvlad@mail.ru</span>
+                    <span id="user-email" class="link"></span>
                   </div>
                 </div>
               </div>
@@ -56,13 +56,13 @@
               </div>
               <button class="read-more">Подробнее</button>
             </a>
-            <!-- <a href="categories.html" class="user-options">
+            <a href="categories.html" class="user-options">
               <div class="user-options__left-box">
                 <div class="user-options__img"><img src="images/icons/saved.svg" alt="saved"></div>
                 <h3 class="user-options__title">Избранное</h3>
               </div>
               <button class="read-more">Подробнее</button>
-            </a> -->
+            </a>
           </div>
         </div>
         <!-- <div class="delivery">
