--- a/profile.html
+++ b/profile.html
@@ -30,11 +30,11 @@
         <div class="submission-form">
           <h2 class="title">ПРОФИЛЬ</h2>
           <form>
-            <input class="form-control" type="text" value="Иван">
-            <input class="form-control" type="text" value="Иванов">
-            <input class="form-control" type="text" value="15.07.1999">
-            <input class="form-control" type="tel" value="+7(900) 555-35-35">
-            <input class="form-control" type="text" value="Иван">
+            <input id="user-first_name" class="form-control" type="text" />
+            <input id="user-last_name" class="form-control" type="text" />
+            <input id="user-phone" class="form-control" type="tel" />
+            <input id="user-email" class="form-control" type="text" />
+            <input id="user-address" class="form-control" type="text" />
           </form>
         </div>
       </div>
