--- a/basket.html
+++ b/basket.html
@@ -48,8 +48,8 @@
 
   <div class="order-modal">
     <div class="modal-content">
-      <h4 class="modal-title">Заказ оформлен</h4>
-      <img src="images/icons/ture.svg" alt="">
+      <h4 class="modal-title" id="title-order">Заказ оформлен</h4>
+      <img src="images/icons/ture.svg" id="is-success" alt="">
       <button class="brown-btn close-modal">ок</button>
     </div>
   </div>
