--- a/my-orders.html
+++ b/my-orders.html
@@ -28,7 +28,7 @@
     <main>
       <div class="container">
         <h1 class="title">МОИ ЗАКАЗЫ</h1>
-        <div class="my-orders">
+        <div class="my-orders" id="orders-container">
           <div class="my-orders__cards">
             <span class="my-orders__cards-label">16 Февраля</span>
             <div class="my-orders__card">
