--- a/my-orders.html
+++ b/my-orders.html
@@ -28,38 +28,7 @@
     <main>
       <div class="container">
         <h1 class="title">МОИ ЗАКАЗЫ</h1>
-        <div class="my-orders" id="orders-container">
-          <div class="my-orders__cards">
-            <span class="my-orders__cards-label">16 Февраля</span>
-            <div class="my-orders__card">
-              <div class="left-box">
-                <img class="my-orders__card-img" src="images/catalog-img-1.png" alt="">
-                <h4 class="my-orders__card-name">Ден ден дайко</h4>
-              </div>
-              <h3 class="my-orders__card-price">990 Р</h3>
-              <a class="card-btn yellow-btn" href="#!">В пути</a>
-            </div>
-            <div class="my-orders__card">
-              <div class="left-box">
-                <img class="my-orders__card-img" src="images/catalog-img-2.png" alt="">
-                <h4 class="my-orders__card-name">Ангел металлический</h4>
-              </div>
-              <h3 class="my-orders__card-price">990 Р</h3>
-              <a class="card-btn gree-btn" href="#!">Доставлен</a>
-            </div>
-          </div>
-          <div class="my-orders__cards">
-            <span class="my-orders__cards-label">16 Февраля</span>
-            <div class="my-orders__card">
-              <div class="left-box">
-                <img class="my-orders__card-img" src="images/order-img-1.png" alt="">
-                <h4 class="my-orders__card-name">Ангел металлический</h4>
-              </div>
-              <h3 class="my-orders__card-price">990 Р</h3>
-              <a class="card-btn red-btn" href="#!">Отменен</a>
-            </div>
-          </div>
-        </div>
+        <div class="my-orders" id="orders-container"></div>
       </div>
     </main>
   </div>
